--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "axios": "^0.19.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-jss": "^10.1.1",
+    "react-virtualized": "^9.21.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
