--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "a simple dropdown component for react",
   "scripts": {
-    "start": "PORT=9000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject"
@@ -27,6 +27,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
